fix overflow hidden

--- a/sass/_unittest.scss
+++ b/sass/_unittest.scss
@@ -679,4 +679,11 @@ body {
       }
     }
   }
+  &.postid-34 {
+    .blog-details-wrapper {
+      .comment-respond {
+        margin-top: 80px;
+      }
+    }
+  }
 }
